--- a/index.css
+++ b/index.css
@@ -169,9 +169,13 @@ input[type="number"]::-webkit-inner-spin-button {
 
 }
 
+#button_login{
+    display: none;
+}
+
 #button_container button {
     width: 100%;
-    height: 100%;
+    height: 45px;
     float: left;
     background: transparent;
     color: inherit;
